# brainstorm

./: .gitignore  README.md  pyproject.toml
brainstorm/: README.md  __init__.py  __main__.py  claude_tool.py  config.py  convergence.py  gemini_tool.py  interleave.py  manager.py  output.py  registry.py  strategies.py  types.py
skills/: README.md  brainstorm-cli.md
